--- a/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
+++ b/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
@@ -53,8 +53,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tesseract">
-      <HintPath>..\Toci.Db\packages\Tesseract.2.3.0.0\lib\net45\Tesseract.dll</HintPath>
+    <Reference Include="Tesseract, Version=2.4.0.0, Culture=neutral, PublicKeyToken=ebeb3d86bef60cbe, processorArchitecture=MSIL">
+      <HintPath>..\..\..\phoenix\phoenix.Dal\packages\Tesseract.2.4.0.0\lib\net45\Tesseract.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Zlib.Portable, Version=1.11.0.0, Culture=neutral, processorArchitecture=MSIL">
