--- a/Toci.Libraries/Toci.Utillties.Test/Toci.Utilities.Test.csproj
+++ b/Toci.Libraries/Toci.Utillties.Test/Toci.Utilities.Test.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Web">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Web.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
