--- a/Toci.Libraries/Toci.ErrorsAndMessages/Toci.ErrorsAndMessages.csproj
+++ b/Toci.Libraries/Toci.ErrorsAndMessages/Toci.ErrorsAndMessages.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Http">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
