--- a/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
+++ b/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
@@ -53,9 +53,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tesseract, Version=2.4.0.0, Culture=neutral, PublicKeyToken=ebeb3d86bef60cbe, processorArchitecture=MSIL">
-      <HintPath>..\Toci.Db\packages\Tesseract.2.4.0.0\lib\net45\Tesseract.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Tesseract, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\lib\net45\Tesseract.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +88,8 @@
   <ItemGroup>
     <Folder Include="Document\DocumentRecognizers\OCR\" />
     <Folder Include="Document\DocumentRecognizers\PDF\" />
+    <Folder Include="x64\" />
+    <Folder Include="x86\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Document\DocumentParsers\DOC\Sample\sample3.xml" />
@@ -102,18 +103,6 @@
     <Content Include="Document\DocumentParsers\OCR\img\ex7.jpg" />
     <Content Include="Document\DocumentParsers\OCR\img\ex8.jpg" />
     <Content Include="Document\DocumentParsers\OCR\img\ex9.jpg" />
-    <Content Include="x64\liblept168.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x64\libtesseract302.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x86\liblept168.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x86\libtesseract302.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -140,6 +129,13 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets" Condition="Exists('..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
