draft of dbgeneric ef interfaces

--- a/Toci.Libraries/Toci.Db/Toci.Db.csproj
+++ b/Toci.Libraries/Toci.Db/Toci.Db.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Interfaces\IDbSharding.cs" />
     <Compile Include="Interfaces\IDelete.cs" />
     <Compile Include="Interfaces\IEfDal.cs" />
+    <Compile Include="Interfaces\IGenericDbClient.cs" />
+    <Compile Include="Interfaces\IGenericDbHandle.cs" />
     <Compile Include="Interfaces\IInsert.cs" />
     <Compile Include="Interfaces\IModel.cs" />
     <Compile Include="Interfaces\IQuery.cs" />
