--- a/Toci.Libraries/Toci.Db/Toci.Db.csproj
+++ b/Toci.Libraries/Toci.Db/Toci.Db.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.props" Condition="Exists('..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -36,12 +37,19 @@
       <HintPath>packages\AutoMapper.4.0.4\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Npgsql, Version=2.2.4.3, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libraries\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
@@ -76,6 +84,7 @@
     <Compile Include="DbVirtualization\SelectClause.cs" />
     <Compile Include="DbVirtualization\SQLQuery\SqlQuery.cs" />
     <Compile Include="DbVirtualization\SQLQuery\SqlQueryWithWhereClause.cs" />
+    <Compile Include="EntityFramework\DalEfClientBase.cs" />
     <Compile Include="Interfaces\IDbClient.cs" />
     <Compile Include="Interfaces\IDbCluster.cs" />
     <Compile Include="Interfaces\IDbField.cs" />
@@ -100,8 +109,21 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Toci.Db.Interfaces\Toci.Db.Interfaces.csproj">
+      <Project>{bda91d44-ec72-43b6-a033-eee9ed2e6f19}</Project>
+      <Name>Toci.Db.Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.targets" Condition="Exists('..\..\..\toci_call2me\Toci.Call2Me.Dal.Fifa.Interfaces\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
