--- a/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
+++ b/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
@@ -35,6 +35,14 @@
     <Reference Include="Code7248.word_reader">
       <HintPath>..\Libraries\Code7248.word_reader.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>.\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>.\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="itextsharp">
       <HintPath>..\Libraries\itextsharp.dll</HintPath>
     </Reference>
@@ -54,7 +62,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Tesseract, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\lib\net45\Tesseract.dll</HintPath>
+      <HintPath>.\packages\Tesseract.3.3.0\lib\net45\Tesseract.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -129,12 +137,12 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets" Condition="Exists('..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets')" />
+  <Import Project=".\packages\Tesseract.3.3.0\build\Tesseract.targets" Condition="Exists('..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets'))" />
+    <Error Condition="!Exists('.\packages\Tesseract.3.3.0\build\Tesseract.targets')" Text="$([System.String]::Format('$(ErrorText)', '.\packages\Tesseract.3.3.0\build\Tesseract.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
