--- a/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
+++ b/Toci.Libraries/Toci.Utilities/Toci.Utilities.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.props" Condition="Exists('..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -36,12 +37,10 @@
       <HintPath>..\Libraries\Code7248.word_reader.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>.\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>.\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp">
       <HintPath>..\Libraries\itextsharp.dll</HintPath>
@@ -51,6 +50,7 @@
       <HintPath>..\Libraries\Puma.Net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
@@ -62,7 +62,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Tesseract, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>.\packages\Tesseract.3.3.0\lib\net45\Tesseract.dll</HintPath>
+      <HintPath>..\..\..\toci_phoenix\projects\mg-jupiter\packages\Tesseract.3.3.0\lib\net45\Tesseract.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -137,13 +137,14 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project=".\packages\Tesseract.3.3.0\build\Tesseract.targets" Condition="Exists('..\..\..\toci_hackathon_repiration\Toci.Coronavirus.Respirator.Dal.Interfaces\packages\Tesseract.3.3.0\build\Tesseract.targets')" />
+  <Import Project=".\packages\Tesseract.3.3.0\build\Tesseract.targets" Condition="Exists('.\packages\Tesseract.3.3.0\build\Tesseract.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('.\packages\Tesseract.3.3.0\build\Tesseract.targets')" Text="$([System.String]::Format('$(ErrorText)', '.\packages\Tesseract.3.3.0\build\Tesseract.targets'))" />
-  </Target>
+    </Target>
+  <Import Project=".\packages\EntityFramework.6.4.0\build\EntityFramework.targets" Condition="Exists('.\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" />
+  <Import Project=".\packages\Tesseract.3.3.0\build\Tesseract.targets" Condition="Exists('.\packages\Tesseract.3.3.0\build\Tesseract.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
