--- a/Toci.Libraries/Toci.Db.Interfaces/Toci.Db.Interfaces.csproj
+++ b/Toci.Libraries/Toci.Db.Interfaces/Toci.Db.Interfaces.csproj
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.props" Condition="Exists('..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.props')" />
-  <Import Project="..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.props" Condition="Exists('..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.props')" />
+  <Import Project="..\..\packages\EntityFramework.6.4.0\build\EntityFramework.props" Condition="Exists('..\..\packages\EntityFramework.6.4.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Toci.Db.Interfaces</RootNamespace>
     <AssemblyName>Toci.Db.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
@@ -85,11 +84,8 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.props'))" />
-    <Error Condition="!Exists('..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.targets'))" />
     <Error Condition="!Exists('..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.props'))" />
     <Error Condition="!Exists('..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.targets'))" />
   </Target>
-  <Import Project="..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.targets" Condition="Exists('..\Toci.Db\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" />
   <Import Project="..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.targets" Condition="Exists('..\..\..\toci_phoenix\projects\mg-jupiter\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" />
 </Project>
